deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petstore
  labels:
    app: petstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petstore
  template:
    metadata:
      labels:
        app: petstore
    spec:
      containers:
      - name: petstore
        image: swaggerapi/petstore
        ports:
        - containerPort: 8080
