service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petstore
  labels:
    app: petstore
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: petstore
  type: ClusterIP
